# raytracer

./: CMakeLists.txt  scene1.json  test.json
src/: Scene.cpp  Scene.h  color.h  image.cpp  image.h  main.cpp  rendercontext.cpp  rendercontext.h  scene.cpp  scene.h  texturematerial.h  uniformtexture.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
src/fileutils/: scenereader.cpp  scenereader.h
src/materials/: texturematerial.h  uniformtexture.cpp  uniformtexture.h
src/scene/: camera.cpp  camera.h  light.h  pointlight.cpp  pointlight.h  sceneobject.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/shader/: ambientshader.cpp  ambientshader.h  diffuseshader.cpp  diffuseshader.h  hitcontext.cpp  hitcontext.h  reflectionshader.cpp  reflectionshader.h  shader.cpp  shader.h  shaderengine.cpp  shaderengine.h  specularshader.cpp  specularshader.h  transparencyshader.cpp  transparencyshader.h
src/utils/: Matrix.h  RaycastHit.h  color.cpp  color.h  image.cpp  image.h  raycastHit.h  utils.cpp  utils.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
